# SaturnEngine

./: .clang-format  .gitignore  .gitmodules  3D Engine.sln  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  SEAgain.smproj  SaturnEngine.smp  SaturnEngine.smproj  SaturnEngineNew.smproj  imgui.ini  imgui_log.txt  tangent.py
3D Engine/: 3D Engine.vcxproj  3D Engine.vcxproj.filters  Application.cpp  Application.hpp  CMakeLists.txt  Camera.hpp  CameraTransform.hpp  CameraZoomController.hpp  CameraZoomControllerSystem.cpp  ComponentBase.hpp  ComponentList.hpp  Components.hpp  ConstexprMath.hpp  ECS.hpp  Engine.cpp  Engine.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Exceptions.hpp  FPSCameraController.hpp  FPSCameraControllerSystem.cpp  FPSCameraControllerSystem.hpp  Framebuffer.cpp  Framebuffer.hpp  FreeLookControllerSystem.cpp  FreeLookControllerSystem.hpp  Input.cpp  Input.hpp  LinearTransform.hpp  LogSystem.cpp  LogSystem.hpp  Math.hpp  Matrix.hpp  OpenGL.cpp  OpenGL.hpp  RandomEngine.cpp  RandomEngine.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  (+39 more)
3D Engine/__deleted_code/: CameraTransform.hpp  LinearTransform.hpp  Matrix.hpp  Vec1.hpp  Vec2.hpp  Vec3.hpp  VecBase.hpp  VecMath.hpp
3D Engine/dependencies/: CMakeLists.txt
3D Engine/dependencies/glad/: CMakeLists.txt
3D Engine/dependencies/glad/include/glad/: glad.h
3D Engine/include/: CMakeLists.txt
3D Engine/plf/: plf_colony.h
3D Engine/src/: CMakeLists.txt  main.cpp
CodeGen/Serialization/: CMakeLists.txt  FindLibClang.cmake  Parser.cpp  Parser.hpp  main.cpp
CodeGen/Serialization/libclang/lib/: libclang.exp  libclang.lib
Documentation/html/: _application_8cpp.html  _application_8cpp__incl.dot  _application_8cpp__incl.md5  _application_8hpp.html  _application_8hpp__dep__incl.dot  _application_8hpp__dep__incl.md5  _application_8hpp__incl.dot  _application_8hpp__incl.md5  _application_8hpp_source.html  _constexpr_math_8hpp.html  _constexpr_math_8hpp.js  _constexpr_math_8hpp__dep__incl.dot  _constexpr_math_8hpp__dep__incl.md5  _constexpr_math_8hpp__incl.dot  _constexpr_math_8hpp__incl.md5  _constexpr_math_8hpp_source.html  _engine_8cpp.html  _engine_8cpp__incl.dot  _engine_8cpp__incl.md5  _engine_8hpp.html  _engine_8hpp__dep__incl.dot  _engine_8hpp__dep__incl.md5  _engine_8hpp__incl.dot  _engine_8hpp__incl.md5  _engine_8hpp_source.html  _error_handler_8cpp.html  _error_handler_8cpp__incl.dot  _error_handler_8cpp__incl.md5  _error_handler_8hpp.html  _error_handler_8hpp__dep__incl.dot  _error_handler_8hpp__dep__incl.md5  _error_handler_8hpp__incl.dot  _error_handler_8hpp__incl.md5  _error_handler_8hpp_source.html  _exceptions_8hpp.html  _exceptions_8hpp__dep__incl.dot  _exceptions_8hpp__dep__incl.md5  _exceptions_8hpp__incl.dot  _exceptions_8hpp__incl.md5  _exceptions_8hpp_source.html  (+565 more)
Documentation/latex/: _application_8cpp.tex  _application_8cpp__incl.dot  _application_8cpp__incl.md5  _application_8hpp.tex  _application_8hpp__dep__incl.dot  _application_8hpp__dep__incl.md5  _application_8hpp__incl.dot  _application_8hpp__incl.md5  _constexpr_math_8hpp.tex  _constexpr_math_8hpp__dep__incl.dot  _constexpr_math_8hpp__dep__incl.md5  _constexpr_math_8hpp__incl.dot  _constexpr_math_8hpp__incl.md5  _engine_8cpp.tex  _engine_8cpp__incl.dot  _engine_8cpp__incl.md5  _engine_8hpp.tex  _engine_8hpp__dep__incl.dot  _engine_8hpp__dep__incl.md5  _engine_8hpp__incl.dot  _engine_8hpp__incl.md5  _error_handler_8cpp.tex  _error_handler_8cpp__incl.dot  _error_handler_8cpp__incl.md5  _error_handler_8hpp.tex  _error_handler_8hpp__dep__incl.dot  _error_handler_8hpp__dep__incl.md5  _error_handler_8hpp__incl.dot  _error_handler_8hpp__incl.md5  _exceptions_8hpp.tex  _exceptions_8hpp__dep__incl.dot  _exceptions_8hpp__dep__incl.md5  _exceptions_8hpp__incl.dot  _exceptions_8hpp__incl.md5  _framebuffer_8cpp.tex  _framebuffer_8cpp__incl.dot  _framebuffer_8cpp__incl.md5  _framebuffer_8hpp.tex  _framebuffer_8hpp__dep__incl.dot  _framebuffer_8hpp__dep__incl.md5  (+301 more)
Saturn Projects/Materials/: Materials.seproj  imgui_style_colors.cpp
Saturn Projects/NewProject/: NewProject.seproj
Saturn Projects/ProjectFileDev/: ProjectFileDev.seproj
Saturn Projects/Skyboxes/: Skyboxes.seproj
Saturn Projects/UiDev/: UiDev.seproj
builds/: CMakeCache.txt  cmake_install.cmake  components.tpl  scene_obj.tpl  source.tpl  test.cpp  test.hpp
config/: last_project.ini  settings.json
include/editor/: editor_system.hpp  log_window.hpp
include/samples/: rotator_system.hpp
resources/: Idfk.rdc  capture.rdc  huh.rdc  particles_instanced.rdc
resources/config/: input.config.json
resources/engine_cache/: last_scene.txt
resources/entities/: my_emitter.json
resources/meshes/: box_collider.mesh  line.mesh  my_cube.mesh  my_plane.mesh  plane2.mesh  scaled_plane.mesh
resources/shaders/: axis.sh  axis_f.glsl  blinn_phong.sh  blinn_phong_f.glsl  blit.sh  collider.sh  collider_f.glsl  default.sh  default_v.glsl  depth_map.sh  depth_map_f.glsl  depth_map_v.glsl  lit.sh  lit_f.glsl  lit_v.glsl  normal_mapping.sh  normal_mapping_f.glsl  normal_mapping_v.glsl  outline.sh  outline_f.glsl  outline_v.glsl  particle.sh  particle_f.glsl  shadow.sh  shadow_f.glsl  shadow_v.glsl  texture.sh  texture_v.glsl
resources/textures/: balls.tex  brickwall.tex  brickwall_normal.tex  brickwall_specular.tex  container2.tex  container2_specular.tex  white.tex  wood.tex  wood_floor.tex  wood_floor_specular.tex
src/: CMakeLists.txt  main.cpp
src/assets/: assets.cpp
src/codegen/: argument_parser.cpp  ast_visitor.cpp  category_generator.cpp  display_fields_generator.cpp  file_parser.cpp  main.cpp  meta_generator.cpp  serialization_generator.cpp  utility.cpp
src/core/: engine.cpp  input.cpp
src/ecs/: registry.cpp  system_manager.cpp  systems.cpp
src/editor/: CMakeLists.txt  editor_main.cpp  editor_system.cpp  log_window.cpp
src/meta/: type_category.generated.cpp
src/scene/: scene.cpp
templates/: component_for_each.hpp.mst  component_serializers.cpp.mst  component_serializers.hpp.mst  display_component_fields.cpp.mst  display_component_fields.hpp.mst  type_category.mst
(+908 files in other folders)
